@@ -2,7 +2,7 @@ module Devise
   module Strategies
     # Default strategy for signing in a user, based on his email and password.
     # Redirects to sign_in page if it's not authenticated
-    class Authenticable < Devise::Strategies::Base
+    class Authenticatable < Devise::Strategies::Base
 
       # Authenticate a user based on email and password params, returning to warden
       # success and the authenticated user if everything is okay. Otherwise redirect
@@ -43,4 +43,4 @@ module Devise
   end
 end
 
-Warden::Strategies.add(:authenticable, Devise::Strategies::Authenticable)
+Warden::Strategies.add(:authenticatable, Devise::Strategies::Authenticatable)
